# ipa2ru

./: Cargo.toml  README.md
src/: ipa.rs  lib.rs  main.rs  misc.rs  ru.rs
