[package]
name = "ipa2ru"
version = "0.4.0"
edition = "2021"
description = "Translator from IPA to russian"
authors = ["Мира Лущаева <miralushch@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
ipa-sounds = { version = "0.3.1", git = "https://github.com/miralushch/ipa-sounds" }
value-enum = { version = "0.2.0", git = "https://github.com/miralushch/value-enum" }

